vlib/v/checker/tests/enum_op_flag_err.out
vlib/v/checker/tests/enum_op_flag_err.vv:9:24: error: only `==`, `!=`, `|` and `&` are defined on `[flag]` tagged `enum`, use an explicit cast to `int` if needed
    7 |
    8 | fn main() {
    9 |     println(FilePerm.read > FilePerm.write)
      |                           ^
   10 |     println(FilePerm.write + FilePerm.exec)
   11 |     println(FilePerm.write && FilePerm.exec)
vlib/v/checker/tests/enum_op_flag_err.vv:10:25: error: only `==`, `!=`, `|` and `&` are defined on `[flag]` tagged `enum`, use an explicit cast to `int` if needed
    8 | fn main() {
    9 |     println(FilePerm.read > FilePerm.write)
   10 |     println(FilePerm.write + FilePerm.exec)
      |                            ^
   11 |     println(FilePerm.write && FilePerm.exec)
   12 | }
vlib/v/checker/tests/enum_op_flag_err.vv:11:10: error: left operand for `&&` is not a boolean
    9 |     println(FilePerm.read > FilePerm.write)
   10 |     println(FilePerm.write + FilePerm.exec)
   11 |     println(FilePerm.write && FilePerm.exec)
      |             ~~~~~~~~~~~~~~
   12 | }
