vlib/v/checker/tests/enum_op_flag_err.vv
[flag]
enum FilePerm {
	read
	write
	exec
}

fn main() {
	println(FilePerm.read > FilePerm.write)
	println(FilePerm.write + FilePerm.exec)
	println(FilePerm.write && FilePerm.exec)
}
